fixed horizontal scrollbar overlap

--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -4,9 +4,7 @@ app-nav-bar { // should be out of document flow.
 
     height: 50px;
     width: 100vw; 
-
-    top: 0px;
-    left: 0px;
+    max-width: 100%;  
 
     box-shadow: 0px 6px 10px 0 rgba(0,0,0,.4); 
 }
@@ -27,6 +25,7 @@ app-nav-bar { // should be out of document flow.
     display: inline-block;
 
     width: 100vw;
+    max-width: 100%; 
 
     background-color: rgb(255,255,255);
 }
@@ -35,6 +34,7 @@ app-nav-bar { // should be out of document flow.
     position: relative; // needs to be relative to parent
 
     width: 100vw;
+    max-width: 100%; 
     height: 100px;
 
     margin-top: 10px; // gives spacing between main content and footer.
