--- a/Frontend/src/app/footer-bar/footer-bar.component.scss
+++ b/Frontend/src/app/footer-bar/footer-bar.component.scss
@@ -8,15 +8,11 @@
     height: 100%;
 
     overflow: hidden;
-
-    clear: right;
 }
 
 #footer_content {
-    margin-left: 10px;
-    margin-right: 10px;
-
-    height: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
  
 p {
